export const snapshot = {};

snapshot[`relations plugin 1`] = `7`;

snapshot[`relations plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`relations plugin 3`] = `
[
]
`;

snapshot[`relations plugin 4`] = `
{
  content: "<h1>Category 1</h1>

<div><p>This is the first category</p>
</div>

<h2>Posts</h2>
<ul>

</ul>
",
  data: {
    content: "This is the first category
",
    date: 1970-01-01T00:00:00.000Z,
    layout: "categories.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    post: [
      <ref *2> {
        category: {
          content: "This is the first category
",
          date: 1970-01-01T00:00:00.000Z,
          layout: "categories.njk",
          mergedKeys: {
            tags: "stringArray",
          },
          page: undefined,
          paginate: [Function: paginate],
          post: [Circular *1],
          renderOrder: -2,
          search: Search {},
          slug: "category-1",
          tags: [
          ],
          title: "Category 1",
          type: "category",
          url: "/categories/category-1/",
        },
        category_id: "category-1",
        comment: [
          {
            content: "This is the second comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 2,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [
              [Circular *2],
            ],
            renderOrder: -1,
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-2/",
          },
        ],
        comment_id: [
          2,
        ],
        content: "Second post with category 1 and comment 2
",
        date: 1970-01-01T00:00:00.000Z,
        id: "second-post",
        layout: "posts.njk",
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        search: Search {},
        tags: [
        ],
        type: "post",
        url: "/posts/post-2/",
      },
    ],
    renderOrder: -2,
    search: Search {},
    slug: "category-1",
    tags: [
    ],
    title: "Category 1",
    type: "category",
    url: "/categories/category-1/",
  },
  dest: {
    ext: ".html",
    path: "/categories/category-1/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/categories/category-1",
    remote: undefined,
    slug: "category-1",
  },
}
`;

snapshot[`relations plugin 5`] = `
{
  content: "<h1>Category 2</h1>

<div><p>This is the second category</p>
</div>

<h2>Posts</h2>
<ul>

</ul>
",
  data: {
    content: "This is the second category
",
    date: 1970-01-01T00:00:00.000Z,
    layout: "categories.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    post: [
      <ref *2> {
        category: {
          content: "This is the second category
",
          date: 1970-01-01T00:00:00.000Z,
          layout: "categories.njk",
          mergedKeys: {
            tags: "stringArray",
          },
          page: undefined,
          paginate: [Function: paginate],
          post: [Circular *1],
          search: Search {},
          slug: "category-2",
          tags: [
          ],
          title: "Category 2",
          type: "category",
          url: "/categories/category-2/",
        },
        category_id: "category-2",
        comment: [
          {
            content: "This is the first comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 1,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [
              [Circular *2],
            ],
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-1/",
          },
          {
            content: "This is the third comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 3,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [
              [Circular *2],
            ],
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-3/",
          },
        ],
        comment_id: [
          1,
          3,
        ],
        content: "First post with category 2 and comments 1 and 3
",
        date: 1970-01-01T00:00:00.000Z,
        id: "first-post",
        layout: "posts.njk",
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        renderOrder: 1,
        search: Search {},
        tags: [
        ],
        type: "post",
        url: "/posts/post-1/",
      },
    ],
    search: Search {},
    slug: "category-2",
    tags: [
    ],
    title: "Category 2",
    type: "category",
    url: "/categories/category-2/",
  },
  dest: {
    ext: ".html",
    path: "/categories/category-2/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/categories/category-2",
    remote: undefined,
    slug: "category-2",
  },
}
`;

snapshot[`relations plugin 6`] = `
{
  content: "<p>This is the first comment</p>
",
  data: {
    content: "This is the first comment
",
    date: 1970-01-01T00:00:00.000Z,
    id: 1,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    post: [
      <ref *1> {
        category: {
          content: "This is the second category
",
          date: 1970-01-01T00:00:00.000Z,
          layout: "categories.njk",
          mergedKeys: {
            tags: "stringArray",
          },
          page: undefined,
          paginate: [Function: paginate],
          post: [
            [Circular *1],
          ],
          search: Search {},
          slug: "category-2",
          tags: [
          ],
          title: "Category 2",
          type: "category",
          url: "/categories/category-2/",
        },
        category_id: "category-2",
        comment: [
          {
            content: "This is the first comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 1,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [Circular *2],
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-1/",
          },
          {
            content: "This is the third comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 3,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [
              [Circular *1],
            ],
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-3/",
          },
        ],
        comment_id: [
          1,
          3,
        ],
        content: "First post with category 2 and comments 1 and 3
",
        date: 1970-01-01T00:00:00.000Z,
        id: "first-post",
        layout: "posts.njk",
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        renderOrder: 1,
        search: Search {},
        tags: [
        ],
        type: "post",
        url: "/posts/post-1/",
      },
    ],
    search: Search {},
    tags: [
    ],
    type: "comment",
    url: "/comments/comment-1/",
  },
  dest: {
    ext: ".html",
    path: "/comments/comment-1/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/comments/comment-1",
    remote: undefined,
    slug: "comment-1",
  },
}
`;

snapshot[`relations plugin 7`] = `
{
  content: "<p>This is the second comment</p>
",
  data: {
    content: "This is the second comment
",
    date: 1970-01-01T00:00:00.000Z,
    id: 2,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    post: [
      <ref *1> {
        category: {
          content: "This is the first category
",
          date: 1970-01-01T00:00:00.000Z,
          layout: "categories.njk",
          mergedKeys: {
            tags: "stringArray",
          },
          page: undefined,
          paginate: [Function: paginate],
          post: [
            [Circular *1],
          ],
          renderOrder: -2,
          search: Search {},
          slug: "category-1",
          tags: [
          ],
          title: "Category 1",
          type: "category",
          url: "/categories/category-1/",
        },
        category_id: "category-1",
        comment: [
          {
            content: "This is the second comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 2,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [Circular *2],
            renderOrder: -1,
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-2/",
          },
        ],
        comment_id: [
          2,
        ],
        content: "Second post with category 1 and comment 2
",
        date: 1970-01-01T00:00:00.000Z,
        id: "second-post",
        layout: "posts.njk",
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        search: Search {},
        tags: [
        ],
        type: "post",
        url: "/posts/post-2/",
      },
    ],
    renderOrder: -1,
    search: Search {},
    tags: [
    ],
    type: "comment",
    url: "/comments/comment-2/",
  },
  dest: {
    ext: ".html",
    path: "/comments/comment-2/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/comments/comment-2",
    remote: undefined,
    slug: "comment-2",
  },
}
`;

snapshot[`relations plugin 8`] = `
{
  content: "<p>This is the third comment</p>
",
  data: {
    content: "This is the third comment
",
    date: 1970-01-01T00:00:00.000Z,
    id: 3,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    post: [
      <ref *1> {
        category: {
          content: "This is the second category
",
          date: 1970-01-01T00:00:00.000Z,
          layout: "categories.njk",
          mergedKeys: {
            tags: "stringArray",
          },
          page: undefined,
          paginate: [Function: paginate],
          post: [
            [Circular *1],
          ],
          search: Search {},
          slug: "category-2",
          tags: [
          ],
          title: "Category 2",
          type: "category",
          url: "/categories/category-2/",
        },
        category_id: "category-2",
        comment: [
          {
            content: "This is the first comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 1,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [
              [Circular *1],
            ],
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-1/",
          },
          {
            content: "This is the third comment
",
            date: 1970-01-01T00:00:00.000Z,
            id: 3,
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            post: [Circular *2],
            search: Search {},
            tags: [
            ],
            type: "comment",
            url: "/comments/comment-3/",
          },
        ],
        comment_id: [
          1,
          3,
        ],
        content: "First post with category 2 and comments 1 and 3
",
        date: 1970-01-01T00:00:00.000Z,
        id: "first-post",
        layout: "posts.njk",
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        renderOrder: 1,
        search: Search {},
        tags: [
        ],
        type: "post",
        url: "/posts/post-1/",
      },
    ],
    search: Search {},
    tags: [
    ],
    type: "comment",
    url: "/comments/comment-3/",
  },
  dest: {
    ext: ".html",
    path: "/comments/comment-3/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/comments/comment-3",
    remote: undefined,
    slug: "comment-3",
  },
}
`;

snapshot[`relations plugin 9`] = `
{
  content: '<div><p>First post with category 2 and comments 1 and 3</p>
</div>

  
<h2>Category:</h2>
<a href="/categories/category-2/">Category 2</a>
<p>This is the second category</p>


<ul>

  <li><p>This is the first comment</p></li>

  <li><p>This is the third comment</p></li>

</ul>',
  data: {
    category: <ref *1> {
      content: "This is the second category
",
      date: 1970-01-01T00:00:00.000Z,
      layout: "categories.njk",
      mergedKeys: {
        tags: "stringArray",
      },
      page: undefined,
      paginate: [Function: paginate],
      post: [
        <ref *2> {
          category: [Circular *1],
          category_id: "category-2",
          comment: [
            {
              content: "This is the first comment
",
              date: 1970-01-01T00:00:00.000Z,
              id: 1,
              mergedKeys: {
                tags: "stringArray",
              },
              page: undefined,
              paginate: [Function: paginate],
              post: [
                [Circular *2],
              ],
              search: Search {},
              tags: [
              ],
              type: "comment",
              url: "/comments/comment-1/",
            },
            {
              content: "This is the third comment
",
              date: 1970-01-01T00:00:00.000Z,
              id: 3,
              mergedKeys: {
                tags: "stringArray",
              },
              page: undefined,
              paginate: [Function: paginate],
              post: [
                [Circular *2],
              ],
              search: Search {},
              tags: [
              ],
              type: "comment",
              url: "/comments/comment-3/",
            },
          ],
          comment_id: [
            1,
            3,
          ],
          content: "First post with category 2 and comments 1 and 3
",
          date: 1970-01-01T00:00:00.000Z,
          id: "first-post",
          layout: "posts.njk",
          mergedKeys: {
            tags: "stringArray",
          },
          page: undefined,
          paginate: [Function: paginate],
          renderOrder: 1,
          search: Search {},
          tags: [
          ],
          type: "post",
          url: "/posts/post-1/",
        },
      ],
      search: Search {},
      slug: "category-2",
      tags: [
      ],
      title: "Category 2",
      type: "category",
      url: "/categories/category-2/",
    },
    category_id: "category-2",
    comment: [
      {
        content: "This is the first comment
",
        date: 1970-01-01T00:00:00.000Z,
        id: 1,
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        post: [
          <ref *2> {
            category: <ref *1> {
              content: "This is the second category
",
              date: 1970-01-01T00:00:00.000Z,
              layout: "categories.njk",
              mergedKeys: {
                tags: "stringArray",
              },
              page: undefined,
              paginate: [Function: paginate],
              post: [
                [Circular *2],
              ],
              search: Search {},
              slug: "category-2",
              tags: [
              ],
              title: "Category 2",
              type: "category",
              url: "/categories/category-2/",
            },
            category_id: "category-2",
            comment: [Circular *3],
            comment_id: [
              1,
              3,
            ],
            content: "First post with category 2 and comments 1 and 3
",
            date: 1970-01-01T00:00:00.000Z,
            id: "first-post",
            layout: "posts.njk",
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            renderOrder: 1,
            search: Search {},
            tags: [
            ],
            type: "post",
            url: "/posts/post-1/",
          },
        ],
        search: Search {},
        tags: [
        ],
        type: "comment",
        url: "/comments/comment-1/",
      },
      {
        content: "This is the third comment
",
        date: 1970-01-01T00:00:00.000Z,
        id: 3,
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        post: [
          <ref *2> {
            category: <ref *1> {
              content: "This is the second category
",
              date: 1970-01-01T00:00:00.000Z,
              layout: "categories.njk",
              mergedKeys: {
                tags: "stringArray",
              },
              page: undefined,
              paginate: [Function: paginate],
              post: [
                [Circular *2],
              ],
              search: Search {},
              slug: "category-2",
              tags: [
              ],
              title: "Category 2",
              type: "category",
              url: "/categories/category-2/",
            },
            category_id: "category-2",
            comment: [Circular *3],
            comment_id: [
              1,
              3,
            ],
            content: "First post with category 2 and comments 1 and 3
",
            date: 1970-01-01T00:00:00.000Z,
            id: "first-post",
            layout: "posts.njk",
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            renderOrder: 1,
            search: Search {},
            tags: [
            ],
            type: "post",
            url: "/posts/post-1/",
          },
        ],
        search: Search {},
        tags: [
        ],
        type: "comment",
        url: "/comments/comment-3/",
      },
    ],
    comment_id: [
      1,
      3,
    ],
    content: "First post with category 2 and comments 1 and 3
",
    date: 1970-01-01T00:00:00.000Z,
    id: "first-post",
    layout: "posts.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    renderOrder: 1,
    search: Search {},
    tags: [
    ],
    type: "post",
    url: "/posts/post-1/",
  },
  dest: {
    ext: ".html",
    path: "/posts/post-1/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/posts/post-1",
    remote: undefined,
    slug: "post-1",
  },
}
`;

snapshot[`relations plugin 10`] = `
{
  content: '<div><p>Second post with category 1 and comment 2</p>
</div>

  
<h2>Category:</h2>
<a href="/categories/category-1/">Category 1</a>
<p>This is the first category</p>


<ul>

  <li><p>This is the second comment</p></li>

</ul>',
  data: {
    category: <ref *1> {
      content: "This is the first category
",
      date: 1970-01-01T00:00:00.000Z,
      layout: "categories.njk",
      mergedKeys: {
        tags: "stringArray",
      },
      page: undefined,
      paginate: [Function: paginate],
      post: [
        <ref *2> {
          category: [Circular *1],
          category_id: "category-1",
          comment: [
            {
              content: "This is the second comment
",
              date: 1970-01-01T00:00:00.000Z,
              id: 2,
              mergedKeys: {
                tags: "stringArray",
              },
              page: undefined,
              paginate: [Function: paginate],
              post: [
                [Circular *2],
              ],
              renderOrder: -1,
              search: Search {},
              tags: [
              ],
              type: "comment",
              url: "/comments/comment-2/",
            },
          ],
          comment_id: [
            2,
          ],
          content: "Second post with category 1 and comment 2
",
          date: 1970-01-01T00:00:00.000Z,
          id: "second-post",
          layout: "posts.njk",
          mergedKeys: {
            tags: "stringArray",
          },
          page: undefined,
          paginate: [Function: paginate],
          search: Search {},
          tags: [
          ],
          type: "post",
          url: "/posts/post-2/",
        },
      ],
      renderOrder: -2,
      search: Search {},
      slug: "category-1",
      tags: [
      ],
      title: "Category 1",
      type: "category",
      url: "/categories/category-1/",
    },
    category_id: "category-1",
    comment: [
      {
        content: "This is the second comment
",
        date: 1970-01-01T00:00:00.000Z,
        id: 2,
        mergedKeys: {
          tags: "stringArray",
        },
        page: undefined,
        paginate: [Function: paginate],
        post: [
          <ref *2> {
            category: <ref *1> {
              content: "This is the first category
",
              date: 1970-01-01T00:00:00.000Z,
              layout: "categories.njk",
              mergedKeys: {
                tags: "stringArray",
              },
              page: undefined,
              paginate: [Function: paginate],
              post: [
                [Circular *2],
              ],
              renderOrder: -2,
              search: Search {},
              slug: "category-1",
              tags: [
              ],
              title: "Category 1",
              type: "category",
              url: "/categories/category-1/",
            },
            category_id: "category-1",
            comment: [Circular *3],
            comment_id: [
              2,
            ],
            content: "Second post with category 1 and comment 2
",
            date: 1970-01-01T00:00:00.000Z,
            id: "second-post",
            layout: "posts.njk",
            mergedKeys: {
              tags: "stringArray",
            },
            page: undefined,
            paginate: [Function: paginate],
            search: Search {},
            tags: [
            ],
            type: "post",
            url: "/posts/post-2/",
          },
        ],
        renderOrder: -1,
        search: Search {},
        tags: [
        ],
        type: "comment",
        url: "/comments/comment-2/",
      },
    ],
    comment_id: [
      2,
    ],
    content: "Second post with category 1 and comment 2
",
    date: 1970-01-01T00:00:00.000Z,
    id: "second-post",
    layout: "posts.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    type: "post",
    url: "/posts/post-2/",
  },
  dest: {
    ext: ".html",
    path: "/posts/post-2/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/posts/post-2",
    remote: undefined,
    slug: "post-2",
  },
}
`;
